Adding README directions

--- a/PillarKataWordSearch/PillarKataWordSearch.csproj
+++ b/PillarKataWordSearch/PillarKataWordSearch.csproj
@@ -3,6 +3,13 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    <StartupObject>PillarKataWordSearch.Program</StartupObject>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Update="testdata1.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 
 </Project>
