--- a/CodeKataWordSearchTest/CodeKataWordSearchTest.csproj
+++ b/CodeKataWordSearchTest/CodeKataWordSearchTest.csproj
@@ -4,6 +4,10 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
 
     <IsPackable>false</IsPackable>
+
+    <AssemblyName>CodeKataWordSearchTest</AssemblyName>
+
+    <RootNamespace>CodeKataWordSearchTest</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
@@ -13,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\PillarKataWordSearch\PillarKataWordSearch.csproj" />
+    <ProjectReference Include="..\CodeKataWordSearch\CodeKataWordSearch.csproj" />
   </ItemGroup>
 
 </Project>
